--- a/B&B_App/B&B_App.csproj
+++ b/B&B_App/B&B_App.csproj
@@ -14,6 +14,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\B&amp;B_ClassLibrary\B&amp;B_ClassLibrary.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
   </ItemGroup>
 
