initial db migration

--- a/B&B_Api/appsettings.json
+++ b/B&B_Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BedAndBreakfastDbContext": "Server=(localdb)\\mssqllocaldb;Database=BAndBDB.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
