--- a/B&B_api/B&B_api.csproj
+++ b/B&B_api/B&B_api.csproj
@@ -28,4 +28,8 @@
     <ProjectReference Include="..\B&amp;B_ClassLibrary\B&amp;B_ClassLibrary.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
