Fixed connection issue

--- a/B&B_Api/appsettings.json
+++ b/B&B_Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BedAndBreakfastDbContext": "Server=(localdb)\\mssqllocaldb;Database=BAndBDB.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "BedAndBreakfastDbContext": "Server=(localdb)\\mssqllocaldb;Database=BAndBDB.Data;Trusted_Connection=True;MultipleActiveResultSets=true;Integrated Security=True; TrustServerCertificate=True"
   }
 }
