--- a/B&B_App/B&B_App.csproj
+++ b/B&B_App/B&B_App.csproj
@@ -21,11 +21,9 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-<<<<<<< HEAD
-    <PackageReference Include="MudBlazor" Version="6.8.0" />
-=======
+    <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
     <PackageReference Include="NPOI" Version="2.6.1" />
->>>>>>> FrontendServiceSetup
+    <PackageReference Include="MudBlazor" Version="6.8.0" />
   </ItemGroup>
 
   <ItemGroup>
