--- a/B&B_App/B&B_App.csproj
+++ b/B&B_App/B&B_App.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Pages\UserEditor.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.5" PrivateAssets="all" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
@@ -35,7 +39,20 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Components\FormCreating\" />
     <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Pages\UserEditor.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Pages\UserEditor.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Pages\UserEditor.razor" />
   </ItemGroup>
 
 </Project>
