Small bug fixes and added dropdown

--- a/B&B_Api/Properties/launchSettings.json
+++ b/B&B_Api/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://0.0.0.0:7135;http://0.0.0.0:5188",
+      "applicationUrl": "http://0.0.0.0:5188",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
